--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,12 @@
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-table": "^7.8.0",
+    "reactstrap": "^9.1.5",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.56.1",
     "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
